# s3-proxy

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cliff.toml  rustfmt.toml
ci/: Dockerfile  autochangelog.sh  autotag.sh  update-cargo-cached.sh
src/: config.rs  error.rs  handler.rs  main.rs  request.rs  uni_key.rs
tests/: integration.rs
tests/py/: delete_objects.py  lj_delete_objects.py  requirements.txt
