[package]
name = "s3-proxy"
version = "1.2.1"
edition = "2021"

[profile.release-with-debug]
inherits = "release"
debug = true

[dependencies]
axum = { version = "0.6.1" }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http = "0.2.8"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
arc-swap = "1.5.1"
once_cell = "1.15.0"
async-trait = "0.1"

[dependencies.patsnap-constants]
git = "will be open sourced soon"

[dependencies.piam-core]
#path = "../../security/piam/crates/piam-core"
git = "https://github.com/patsnapops/piam.git"
version = "0.21.0"

[dependencies.piam-proxy]
#path = "../../security/piam/crates/piam-proxy"
git = "https://github.com/patsnapops/piam.git"
version = "0.21.0"
features = ["aws-xml-response", "prefilter", "tencent-signature"]

[dependencies.piam-object-storage]
#path = "../../security/piam/crates/piam-object-storage"
git = "https://github.com/patsnapops/piam.git"
version = "0.21.0"
features = ["cos-parser"]

[dependencies.busylib]
git = "https://github.com/patsnapops/busylib.git"
version = "0.1.0"
#rev = "fecc4006"

[dependencies.aws-smithy-async]
version = "0.55.0"
optional = true

[dependencies.aws-sdk-s3]
version = "0.25.0"
optional = true

[dependencies.aws-types]
version = "0.55.0"
optional = true

[dependencies.aws-credential-types]
version = "0.55.0"
features = ["hardcoded-credentials"]
optional = true

[dev-dependencies]
aws-config = "0.55.0"
aws-smithy-client = "0.55.0"
futures = "0.3.24"

[dev-dependencies.uuid]
version = "1.1.2"
features = ["v4", "fast-rng", "macro-diagnostics"]

[features]
# Special requirement for s3 proxy: Using a unified access key (without account code at the end) to
# access buckets across multiple accounts for each user
uni-key = ["aws-sdk-s3", "aws-smithy-async", "aws-types"]
